:bug: fix: lyrics not centered

--- a/src/user.css
+++ b/src/user.css
@@ -1844,7 +1844,7 @@ button[aria-label="Browse"] path {
 }
 
 .lyrics-lyrics-contentContainer {
-  margin-top: 20%;
+  margin-top: 45%;
   min-width: 80%;
 }
 
